# bet-app

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.argos/: .gitignore  project.json
.claude/: settings.json
app/: aggregates.py  auth.py  db.py  exercises.py  main.py  routes.py
app/templates/: base.html  dashboard.html  log.html  login.html  my_audit_log.html
docs/: mission.md  spec.md  testing.md  user-intervention.md
iterations/1-20260424_020912/: check-report.json  requirement.md
iterations/2-20260424_034244/: check-report.json  requirement.md
iterations/3-20260424_075811/: check-report.json  requirement.md
iterations/4-20260424_094057/: requirement.md
iterations/5-20260424_104337/: check-report.json  requirement.md
iterations/6-20260424_123444/: requirement.md
persuasion-data/: probe_tasks.md  ux_probe_adapter.py
scripts/: backfill_input_trainer.py  run-phases.py  run-server.py  seed.py  seed_trainer.py
tasks/: index.json
tasks/0-pt-mvp/: docs-diff.md  index.json  phase0-output.json  phase0.md  phase1-output.json  phase1.md  phase2-output.json  phase2.md  phase3-output.json  phase3.md  phase4-output.json  phase4.md  phase5-output.json  phase5.md
tasks/1-trainer-auth-export/: docs-diff.md  index.json  phase0-output.json  phase0.md  phase1-output.json  phase1.md  phase2-output.json  phase2.md  phase3-output.json  (+1 more)
tests/: conftest.py  test_aggregates.py  test_auth.py  test_dashboard.py  test_e2e_dashboard.py  test_export.py  test_log_routes.py  test_member_access.py  test_my_audit_log.py  test_my_export.py
(+87 files in other folders)
